@@ -13,6 +13,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - Added `to_str_radix`.
 - Add support for 32-bit limbs.
 - `most_significant_limb` and `least_significant_limb` methods.
+- Added `widening_mul` and `carrying_mul` methods.
 
 ## Fixed
 
